# production-forecaster-main

./: .gitignore  LICENSE  README.md  build_output.txt  metadata.json  mrp_schema.sql  package-lock.json  package.json  schema_updates.sql  tauri_help.txt  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: CascadedPlanPreview.tsx  ColorSchemeToggle.tsx  DatabaseSettings.tsx  DeliveryLossPareto.tsx  DeliveryScorecardDisplay.tsx  DeliveryScorecardManagement.tsx  EditEntryModal.tsx  EquipmentManagement.tsx  EquipmentScheduler.tsx  HourByHourSheet.tsx  MultiCsvUploader.tsx  PartAttainmentChart.tsx  PartMachineCapabilityManagement.tsx  PipelineDataPreview.tsx  PlanDataPreview.tsx  PlannerAuthModal.tsx  ShiftAttainmentChart.tsx  ShiftPerformanceOverTimeChart.tsx  ShiftProductionEntryModal.tsx  StoreInitializer.tsx  SyncManager.tsx  WeekContext.tsx  WeeklyPlanTable.tsx  ZoomManager.tsx
components/forecaster/: ForecasterConfig.tsx  ForecasterSummary.tsx  ForecasterTable.tsx  ForecasterTypes.ts  ProductionForecaster.tsx
hooks/: useAutoRefresh.ts  useAutoScheduler.ts  useAvailableMachines.ts  useProductionDisplayUnit.ts  useWebviewZoom.ts
lib/: attainmentUtils.ts  copyUtils.ts  dateUtils.ts  paretoUtils.ts  processStore.ts  schedulerStore.ts  scorecardStore.ts  syncService.ts  types.ts
scratch/: verify_fix.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  models.rs
src-tauri/src/commands/: export.rs  master_data.rs  mod.rs  mrp.rs  pipeline.rs  rates.rs  scheduler.rs  scorecard.rs
(+6 files in other folders)
